# pcsx5

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  DEVGUIDE.md  LICENSE  PENDING.md  PROGRESS.md  README.md  RELEASE.md  ROADMAP.md  _build.bat  build_and_package.ps1  build_msvc.bat  build_msvc_build.bat  build_release.ps1  capture_window.ps1  imgui.ini  pcsx5_boot_parser.cpp
.github/: pull_request_template.md
.github/workflows/: ci.yml
assets/: config.ini  nid_db.txt
assets/lang/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  zh-CN.json  zh-TW.json
compat/: compatibility.json
compat/titles/: PPSA01668.json  PPSA02929.json  PPSA07429.json  PPSA10112.json  PPSA20591.json  PPSA23885.json
installer/: INTRO.txt  pcsx5.iss
memory/: boot-fixes-sprint-1.md
pcsx5_config/: global.json
pcsx5_config/compat/: PPSA02929.jsonl  PPSA23885.jsonl
src/: core_api.cpp  core_api.h  main.cpp  pcsx5.rc
src/common/: crypto.cpp  crypto.h  log.cpp  log.h  nid.cpp  nid.h  types.h
src/common/platform/: platform.h  platform_win32.cpp
src/compat/: compat.cpp  compat.h
src/config/: config.cpp  config.h
src/cpu/: amd_compat.cpp  amd_compat.h  cpu.cpp  cpu.h  syscall.h
src/diagnostics/: diagnostics.cpp  diagnostics.h  frame_timing.cpp  frame_timing.h
src/gpu/: dualsense_hid.h  fsr_upscale.cpp  fsr_upscale.h  gal.cpp  gal.h  gal_backends.cpp  gfx10_state.cpp  gfx10_state.h  gpu.h  shader_cache.cpp  shader_cache.h  vk_context.cpp  vk_context.h  vk_draw.cpp  vk_draw.h  vk_present.cpp  vk_present.h  vulkan_backend.cpp
src/gpu/gdi/: gdi_device.h
src/gpu/input/: dualsense_input_backend.cpp  glfw_keyboard_backend.cpp  input_backend.cpp  input_backend.h  sdl_gamecontroller_backend.cpp  xinput_backend.cpp
src/gpu/shader/: gcn_decode.cpp  gcn_decode.h  gcn_eval.cpp  gcn_eval.h  gcn_translate.cpp  gcn_translate.h  gcn_translate_alu.cpp  gcn_translate_internal.h  metadata.cpp  metadata.h  spirv_builder.cpp  spirv_builder.h
src/gpu/vulkan/: vulkan_device.cpp  vulkan_device.h
src/hle/: dispatcher.asm  guest_printf.cpp  guest_printf.h  hle.cpp  hle.h  keystone.h  libagc.cpp  libappcontent.cpp  libatrac9.cpp  libaudioout.cpp  libfiber.cpp  libjson.cpp  libjson.h  libkernel.cpp  libkernel_file.h  libkernel_sync.cpp  libkernel_sync.h  libkeystone.cpp  liblibc.cpp  libnet.cpp  libnotification.cpp  libnp.cpp  libpad.cpp  libregmgr.cpp  librtc.cpp  libsavedata.cpp  libscepad.cpp  libsysmodule.cpp  libsystem_service.cpp  libuser_service.cpp  libvideoout.cpp
src/hle/audio/: audio_device.cpp  audio_device.h  ring_buffer.h  sdl_audio_device.cpp  wasapi_device.cpp  waveout_device.cpp  xa2_device.cpp
src/ipc/: ipc_gpu_bridge.h  ipc_server.cpp  ipc_server.h  ipc_shared.h
src/kernel/: fd_table.cpp  fd_table.h  guest_clock.cpp  guest_clock.h  kernel.cpp  kernel.h  memory.cpp  memory.h  syscalls.cpp  syscalls.h  thread.cpp  thread.h  tls.cpp  tls.h  tls_patch.cpp  tls_patch.h
src/loader/: elf.cpp  elf.h  module_graph.cpp  module_graph.h  module_resolver.cpp  module_resolver.h  param_json.cpp  param_json.h  pfs.cpp  pfs.h  pkg.cpp  pkg.h  pkg_ps5.cpp  pkg_ps5.h
src/lua/: default_init.lua  lua_init.cpp  lua_init.h
src/media/: bink2_decoder.cpp  cri_usm_decoder.cpp  ffmpeg_decoder.cpp  video_decoder.cpp  video_decoder.h
src/memory/: memory.cpp  memory.h
src/reports/: reports.cpp  reports.h
src/system/: system.cpp  system.h
src/ui/: button_layout.cpp  button_layout.h  console.cpp  console.h  discord_rpc.cpp  discord_rpc.h  i18n.cpp  i18n.h  library.cpp  library.h  process.cpp  process.h  snd_player.cpp  snd_player.h  system_panel.cpp  system_panel.h  theme.cpp  theme.h  thumbnail.cpp  thumbnail.h  ui.cpp  ui.h  ui_scan.cpp
src/ui_csharp/: App.xaml  App.xaml.cs  ControllerVisualizer.xaml  ControllerVisualizer.xaml.cs  CoreBridge.cs  DiscordRpc.cs  DualSenseAudio.cs  GameSession.cs  I18n.cs  IpcSession.cs  MainWindow.xaml  MainWindow.xaml.cs  MicaHelper.cs  Pcsx5Ui.csproj  WindowsDualSenseReader.cs  WindowsHidNative.cs
src/ui_csharp/Input/: NavigationEngine.cs
tests/: compat_tests.cpp  compat_tool.cpp  config_tests.cpp  crypto_tests.cpp  diagnostics_tests.cpp  dump_dt.cpp  dump_imports.cpp  elf_metadata_tests.cpp  gfx10_state_tests.cpp  guest_printf_tests.cpp  headless_smoke.cpp  hle_agc_tests.cpp  hle_audio_pad_tests.cpp  hle_import_report.cpp  hle_phase3_tests.cpp  kernel_memory_tests.cpp  kernel_sync_tests.cpp  keystone_tests.cpp  libcxxabi_tests.cpp  libkernel_file_tests.cpp  loader_corpus.cpp  loader_validation.cpp  make_test_covers.cpp  memory_query_tests.cpp  memory_validation.cpp  memory_write_tracker_tests.cpp  module_graph_tests.cpp  nid_db_tests.cpp  nid_tests.cpp  param_json_tests.cpp  parse_sce.py  pcsx5_snd_decode.cpp  pcsx5_ui.cpp  pfs_tests.cpp  pkg_ps5_tests.cpp  pkg_tests.cpp  report_tests.cpp  self_header_tests.cpp  shader_dump.cpp  shader_tests.cpp  (+7 more)
tests/golden/pm4_synth/: capture.json  submit_00000.json  submit_00001.json  submit_00002.json
tests/test_elf/: build_all.bat  build_corpus.bat  build_elf.bat  build_tls_elf.bat  main.cpp  tls_main.cpp
tools/: dualsense_test.cpp  dualsense_visual.cpp  extract_ffpkg.py  extract_nids.py  nid_scan.cpp  pm4_replay.cpp
wiki/: Home.md  adding-hle-symbols.md  adding-syscalls.md  architecture.md  boot_analysis.md  compatibility.md  debugging.md  implementation_plan.md  pending.md  pkg-extraction.md  self-decryption.md
